Add Fylo Data Storage Component

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <a href="./four-card-feature-section/index.html">Four Card Feature Section</a>
+<a href="./fylo-data-storage-component/index.html">Fylo Data Storage component</a>
