--- a/four-card-feature-section/index.html
+++ b/four-card-feature-section/index.html
@@ -8,7 +8,7 @@
 
   <title>Frontend Mentor | Four card feature section</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -53,11 +53,11 @@
     </div>
   </div>
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://bhanuteja.dev">Bhanu Teja</a>.
-    </p>
-  </footer>
+<!--  <footer>-->
+<!--    <p class="attribution">-->
+<!--      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.-->
+<!--      Coded by <a href="https://bhanuteja.dev">Bhanu Teja</a>.-->
+<!--    </p>-->
+<!--  </footer>-->
 </body>
 </html>
