Make testimonial responsive

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <a href="./four-card-feature-section/index.html">Four Card Feature Section</a>
 <a href="./fylo-data-storage-component/index.html">Fylo Data Storage component</a>
+<a href="./coding-bootcamp-testimonials-slider/index.html">Coding Bootcamp Testimonials Slide</a>
