--- a/coding-bootcamp-testimonials-slider/index.html
+++ b/coding-bootcamp-testimonials-slider/index.html
@@ -8,7 +8,7 @@
 
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="script.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
 
