Add solution for base-apparel-coming-soon challenge

--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<a href="./four-card-feature-section/index.html">Four Card Feature Section</a>
-<a href="./fylo-data-storage-component/index.html">Fylo Data Storage component</a>
-<a href="./coding-bootcamp-testimonials-slider/index.html">Coding Bootcamp Testimonials Slide</a>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Main Page of Frontend Mentor Projects</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+<div class="container">
+  <h1>Frontend Mentor Challenges</h1>
+
+  <h2>Projects</h2>
+  <ul id="list"></ul>
+</div>
+<script src="./script.js"></script>
+</body>
+</html>
