Add error icon in base-apparel-coming-soon challenge

--- a/base-apparel-coming-soon/index.html
+++ b/base-apparel-coming-soon/index.html
@@ -29,6 +29,7 @@
         <div class="input">
           <input id="email" class="email" type="email" placeholder="Email Address" onkeydown="submit(event)" aria-label="email" />
           <img class="icon-arrow" src="images/icon-arrow.svg" alt="Icon Arrow" onclick="subscribe()">
+          <img id="error-icon" class="icon-error hidden" src="images/icon-error.svg" alt="Icon Arrow">
         </div>
         <p id="error-message" class="hidden error message">Please provide a valid email</p>
         <p id="success-message" class="hidden success message">Successfully subscribed!</p>
