--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Main Page of Frontend Mentor Projects</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Main Page of Frontend Mentor Projects</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./style.css" />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
-  <link rel="stylesheet" href="./style.css" />
-</head>
+    <script
+      src="https://cdn.usefathom.com/script.js"
+      site="SRDTNMOZ"
+      defer
+    ></script>
+    <!-- / Fathom -->
+  </head>
 
-<body>
-<div class="container">
-  <h1>Frontend Mentor Challenges</h1>
+  <body>
+    <div class="container">
+      <h1>Frontend Mentor Challenges</h1>
 
-  <h2>Projects</h2>
-  <ul id="list"></ul>
-</div>
-<script src="./script.js"></script>
-</body>
+      <h2>Projects</h2>
+      <ul id="list"></ul>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
