--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       site="SRDTNMOZ"
       defer
     ></script>
-    <!-- / Fathom -->
+    
+    <script async defer data-domain="frontend-mentor.bhanuteja.dev" src="https://plausible.io/js/plausible.js"></script>
   </head>
 
   <body>
